# portfolio-now

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  LICENSE  README.md  REFACOTORING_EINSTANDSPREIS.md  RELEASE_NOTES.md  build-windows.sh  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: release.yml
apps/desktop/: CHANGELOG.md  FRONTEND_IMPLEMENTATION.md  PLAN_DATUM.md  README.md  TECHNICAL_ANALYSIS.md  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts  wdio.conf.ts
apps/desktop/playwright-report/: index.html
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  PDF_IMPORT_STATUS.md  PP_IMPORT_EXPORT.md  PROTOBUF_PROGRESS.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: events.rs  lib.rs
apps/desktop/src-tauri/src/ai/: claude.rs  command_parser.rs  context.rs  gemini.rs  mod.rs  models.rs  normalizer.rs  openai.rs  parsing.rs  perplexity.rs  prompts.rs  query_templates.rs  types.rs  user_templates.rs
apps/desktop/src-tauri/src/commands/: ai.rs  ai_helpers.rs  alerts.rs  annotations.rs  attributes.rs  benchmark.rs  brandfetch.rs  chat.rs  consortium.rs  corporate_actions.rs  crud.rs  csv.rs  currency.rs  dashboard.rs  data.rs  dividends.rs  divvydiary.rs  drawings.rs  file.rs  import.rs  investment_plans.rs  mod.rs  patterns.rs  pdf_export.rs  pdf_import.rs  performance.rs  portfolio.rs  profile.rs  quotes.rs  rebalancing.rs  reports.rs  taxonomy.rs  validation.rs  watchlist.rs
apps/desktop/src-tauri/src/csv_import/: mod.rs  templates.rs
apps/desktop/src-tauri/src/currency/: mod.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/fifo/: mod.rs
apps/desktop/src-tauri/src/models/: mod.rs
apps/desktop/src-tauri/src/optimization/: mod.rs
apps/desktop/src-tauri/src/pdf_import/: baaderbank.rs  comdirect.rs  commerzbank.rs  consorsbank.rs  creditsuisse.rs  dab.rs  degiro.rs  deutschebank.rs  direkt1822.rs  dkb.rs  dzbank.rs  ebase.rs  erstebank.rs  flatex.rs  genobroker.rs  ing.rs  lgt.rs  merkur.rs  mlpbank.rs  mod.rs  ocr.rs  olb.rs  onvista.rs  postbank.rs  postfinance.rs  quirinbank.rs  raiffeisen.rs  revolut.rs  santander.rs  saxobank.rs  sbroker.rs  scalable.rs  swissquote.rs  targobank.rs  trade_republic.rs  ubs.rs  zkb.rs
apps/desktop/src-tauri/src/performance/: mod.rs
apps/desktop/src-tauri/src/pp/: account.rs  client.rs  common.rs  mod.rs  portfolio.rs  security.rs  taxonomy.rs  transaction.rs
apps/desktop/src-tauri/src/protobuf/: mod.rs  parser.rs  schema.rs  writer.rs
apps/desktop/src-tauri/src/quotes/: alphavantage.rs  assistant.rs  coingecko.rs  ecb.rs  finnhub.rs  kraken.rs  mod.rs  portfolio_report.rs  suggestion.rs  tradingview.rs  twelvedata.rs  yahoo.rs
apps/desktop/src-tauri/src/security/: mod.rs
apps/desktop/src-tauri/src/tax/: mod.rs
apps/desktop/src-tauri/src/validation/: ai_fallback.rs  engine.rs  mod.rs  providers.rs  types.rs
apps/desktop/src/components/alerts/: AlertBadge.tsx  AlertsPanel.tsx  index.ts
apps/desktop/src/components/attributes/: AttributeTypeManager.tsx  SecurityAttributesEditor.tsx  (+1 more)
apps/desktop/src/hooks/: useDashboardLayout.ts  useSecureApiKeys.ts
apps/desktop/src/lib/: api.ts  e2e.test.ts  errors.ts  hooks.ts  imageOptimization.ts  index.ts  indicators.test.ts  indicators.ts  patterns.test.ts  patterns.ts  queries.ts  screener.ts  secureStorage.ts  signals.ts  types.ts  utils.ts
apps/desktop/src/store/: index.ts  portfolioAnalysis.ts
apps/desktop/src/views/: index.ts  types.ts  utils.ts
apps/desktop/tests/e2e/: accounts.spec.ts  ai-analysis.spec.ts  ai-chat.spec.ts  ai-stability.spec.ts  allocation-alerts.spec.ts  asset-statement.spec.ts  benchmark.spec.ts  charts.spec.ts  consortium.spec.ts  cost-basis-mode.spec.ts  custom-attributes.spec.ts  dashboard-widgets.spec.ts  dashboard.spec.ts  divvydiary.spec.ts  ex-dividend-calendar.spec.ts  heatmap.spec.ts  holdings.spec.ts  investment-plans.spec.ts  optimization.spec.ts  performance-calculations.spec.ts  portfolio-insights.spec.ts  portfolio.spec.ts  screener.spec.ts  settings.spec.ts  tauri-app.spec.ts  taxonomies.spec.ts  transactions.spec.ts  watchlist.spec.ts
apps/desktop/tests/e2e-app/: app.spec.ts  run-app-tests.sh
(+127 files in other folders)
