[package]
name = "portfolio-now"
version = "0.1.4"
description = "Modern investment portfolio tracking and analysis"
authors = ["Portfolio Now Contributors"]
license = "EPL-1.0"
repository = "https://github.com/portfolio-now/portfolio-now"
edition = "2021"
rust-version = "1.77.2"
default-run = "portfolio-now"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobuf parsing for Portfolio Performance binary format
prost = "0.13"

# ZIP archive handling for .portfolio files
zip = "2.2"

# Database
rusqlite = { version = "0.34", features = ["bundled", "chrono"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# HTTP client for quote fetching
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# UUID generation
uuid = { version = "1.19", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Lazy initialization
once_cell = "1.21"

# Directory paths
dirs = "5.0"

# Regex for reference parsing
regex = "1.11"

# URL encoding for API requests
urlencoding = "2.1"

# Base64 encoding for logo caching
base64 = "0.22"

# PDF text extraction for bank statement import
pdf-extract = "0.7"

# PDF generation for reports
printpdf = "0.7"


[dev-dependencies]

[[bin]]
name = "portfolio-now"
path = "src/main.rs"

[[bin]]
name = "import_test"
path = "src/bin/import_test.rs"

[[bin]]
name = "verify_holdings"
path = "src/bin/verify_holdings.rs"

[[bin]]
name = "verify_db_holdings"
path = "src/bin/verify_db_holdings.rs"

[[bin]]
name = "check_retired"
path = "src/bin/check_retired.rs"

[[bin]]
name = "rebuild_fifo"
path = "src/bin/rebuild_fifo.rs"

[[bin]]
name = "pdf_extractor"
path = "src/bin/pdf_extractor.rs"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "unwind"
strip = true
